--- a/attedance_tracking_system/attendance_tracking_app/templates/student_template/sidebar_template.html
+++ b/attedance_tracking_system/attendance_tracking_app/templates/student_template/sidebar_template.html
@@ -4,16 +4,12 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
-      <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="{% static "dist/img/user2-160x160.jpg" %}" class="img-circle elevation-2" alt="User Image">
-        </div>
+      
         <div class="info">
-          <a href="{% url 'student_profile' %}" class="d-block">{{ user.username }}</a>
+          <a href="{{ student_home }}" class="d-block">{{ user.username }}</a>
         </div>
       </div>
-
       <!-- Sidebar Menu -->
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
