--- a/attedance_tracking_system/attendance_tracking_app/templates/student_template/student_attendance_data.html
+++ b/attedance_tracking_system/attendance_tracking_app/templates/student_template/student_attendance_data.html
@@ -41,7 +41,9 @@ Attendance Data
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">View Attendance</h3>
+                <h3 class="card-title">Subject - {{subject.subject_name}}</h3>
+                <br>
+                <h3 class="card-title">Attendance Percentage - {{percentage}}%</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
